Fixed collapsing iOS sticky categories

--- a/apps/light/src/clients/surlatable/landingpage/lite/styles/main.scss
+++ b/apps/light/src/clients/surlatable/landingpage/lite/styles/main.scss
@@ -182,6 +182,7 @@ body {
 .sticky-wrapper {
     margin: 15px 0 0 0;
     height: $slt-categories-height !important;
+    width: 100%;
 }
 
 #category-area {
